[package]
name = "graph-rs-concurrency-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-rs-sdk = "0.1.2"
graph-http = "0.1.2"
serde = "1.0.130"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
