[package]
name = "graph-rs-concurrency-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graph-rs-sdk = "0.1.4"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
futures = "0.3.21"
reqwest = { version = "0.11.9", features = ["json"] }

